# mpl_bubblegum_ex

./: .gitignore  Cargo.toml  README.md  mix.exs
config/: config.exs
lib/: mpl_bubblegum_ex.ex  native.ex  tree.ex
lib/mpl_bubblegum_ex/: metadata.ex  nft.ex  solana.ex  tree.ex
native/mpl_bubblegum_native/: Cargo.toml  README.md
native/mpl_bubblegum_native/src/: create_tree.rs  lib.rs  metadata.rs  mint.rs  transfer.rs  valid_depth_size_pairs.rs
test/: mpl_bubblegum_ex_test.exs  nft_test.exs  test_helper.exs  transfer_test.exs  tree_integration_test.exs  tree_network_test.exs  tree_unit_test.exs
