[package]
name = "mpl_bubblegum_native"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[lib]
name = "mpl_bubblegum_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = {version = "0.36.1", features = ["derive"]}
solana-client = "1.18.26"
solana-program = "1.18.26"
mpl-bubblegum = { version = "1.4.0"}
zeroize = { version = "1.3", default-features = false }  
solana-sdk = "1.18.26"
spl-account-compression = "0.4.2"
bs58 = "0.5.1"
bincode = "1.3.3"
openssl = { version = "0.10", features = ["vendored"] }
